# xdl

./: Cargo.toml  LICENSE  README.md
src/: axis.rs  backend.rs  input.rs  keyboard.rs  lib.rs  mouse.rs  platform.rs  utils.rs  vi.rs
src/backend/: sdl2_support.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/platform/: mod.rs  rokol.rs  sdl2.rs
