[package]
name = "xdl"
version = "0.2.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Extentional input layer on Rust-SDL2 or Rokol"
repository = "https://github.com/toyboot4e/xdl"

[features]

[dependencies]
num_enum = "0.5.1"
igri = { path = "../igri/igri", version = "0.1.0", optional = true }

serde = { version = "1.0.126", features = ["derive"], optional = true }
sdl2 = { version = "0.34.5", optional = true }
rokol = { path = "../rokol/rokol", version = "0.3.0", features = ["impl-app"], optional = true }

