[package]
name = "xdl"
version = "0.2.1"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Extentional input layer on Rust-SDL2 or Rokol"
repository = "https://github.com/toyboot4e/xdl"

[features]

[dependencies]
num_enum = "0.5.6"
igri = { path = "../igri/igri", version = "0.1.3", optional = true }

serde = { version = "1.0.126", features = ["derive"], optional = true }

# input backend
sdl2 = { version = "0.35.0", optional = true }
rokol = { path = "../rokol/rokol", version = "0.4.0", features = ["impl-app"], optional = true }

