[package]
name = "xdl"
version = "0.2.2"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Extentional input layer on Rust-SDL2"
repository = "https://github.com/toyboot4e/xdl"

[features]
default = ["sdl2", "serde"]

[dependencies]
num_enum = "0.5.7"
igri = { path = "../igri/igri", version = "0.1.3", optional = true }
serde = { version = "1.0.139", features = ["derive"], optional = true }

# input backend
sdl2 = { version = "0.35.2", optional = true }

